crates/shep-core/src/protocol/snapshots/shep_core__protocol__request__tests__reply_wire_v1.snap
---
source: crates/shep-core/src/protocol/request.rs
expression: replies
---
[
  {
    "id": 1,
    "result": {
      "Ok": {
        "kind": "pong"
      }
    }
  },
  {
    "id": 2,
    "result": {
      "Ok": {
        "kind": "flock",
        "data": [
          {
            "id": 3,
            "name": "web",
            "status": "online",
            "pid": 4242,
            "restarts": 1,
            "uptime_ms": 60000,
            "fold": "backend",
            "out_file": "/home/rin/.shep/logs/web-0-out.log",
            "err_file": "/home/rin/.shep/logs/web-0-err.log"
          }
        ]
      }
    }
  },
  {
    "id": 3,
    "result": {
      "Err": {
        "code": "not_found",
        "message": "no sheep matches `web`"
      }
    }
  }
]
